# 2008lab4

./: .gitignore  README.md  pyproject.toml
src/: const.py  main.py
